k8s/manifests/sample-app-istio-example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    istio-injection: enabled # for proxy sidecar injection
