k8s/manifests/sample-app-istio-example/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.56.51
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
    - port: 80
      name: http
      targetPort: 5000
